; ModuleID = '/home/carl/AnghaBench/FFmpeg/libavcodec/extr_hevc_sei.c_decode_nal_sei_active_parameter_sets.c'
source_filename = "/home/carl/AnghaBench/FFmpeg/libavcodec/extr_hevc_sei.c_decode_nal_sei_active_parameter_sets.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_3__ = type { i32 }

@AV_LOG_ERROR = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [31 x i8] c"num_sps_ids_minus1 %d invalid\0A\00", align 1
@AVERROR_INVALIDDATA = common dso_local global i32 0, align 4
@HEVC_MAX_SPS_COUNT = common dso_local global i32 0, align 4
@.str.1 = private unnamed_addr constant [36 x i8] c"active_parameter_set_id %d invalid\0A\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.TYPE_3__*, i32*, i8*)* @decode_nal_sei_active_parameter_sets to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @decode_nal_sei_active_parameter_sets(%struct.TYPE_3__* %0, i32* %1, i8* %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca %struct.TYPE_3__*, align 8
  %6 = alloca i32*, align 8
  %7 = alloca i8*, align 8
  %8 = alloca i32, align 4
  %9 = alloca i32, align 4
  %10 = alloca i32, align 4
  store %struct.TYPE_3__* %0, %struct.TYPE_3__** %5, align 8
  store i32* %1, i32** %6, align 8
  store i8* %2, i8** %7, align 8
  %11 = load i32*, i32** %6, align 8
  %12 = call i32 @get_bits(i32* %11, i32 4)
  %13 = load i32*, i32** %6, align 8
  %14 = call i32 @get_bits(i32* %13, i32 1)
  %15 = load i32*, i32** %6, align 8
  %16 = call i32 @get_bits(i32* %15, i32 1)
  %17 = load i32*, i32** %6, align 8
  %18 = call i8* @get_ue_golomb_long(i32* %17)
  %19 = ptrtoint i8* %18 to i32
  store i32 %19, i32* %8, align 4
  %20 = load i32, i32* %8, align 4
  %21 = icmp slt i32 %20, 0
  br i1 %21, label %25, label %22

22:                                               ; preds = %3
  %23 = load i32, i32* %8, align 4
  %24 = icmp sgt i32 %23, 15
  br i1 %24, label %25, label %31

25:                                               ; preds = %22, %3
  %26 = load i8*, i8** %7, align 8
  %27 = load i32, i32* @AV_LOG_ERROR, align 4
  %28 = load i32, i32* %8, align 4
  %29 = call i32 @av_log(i8* %26, i32 %27, i8* getelementptr inbounds ([31 x i8], [31 x i8]* @.str, i64 0, i64 0), i32 %28)
  %30 = load i32, i32* @AVERROR_INVALIDDATA, align 4
  store i32 %30, i32* %4, align 4
  br label %59

31:                                               ; preds = %22
  %32 = load i32*, i32** %6, align 8
  %33 = call i8* @get_ue_golomb_long(i32* %32)
  %34 = ptrtoint i8* %33 to i32
  store i32 %34, i32* %10, align 4
  %35 = load i32, i32* %10, align 4
  %36 = load i32, i32* @HEVC_MAX_SPS_COUNT, align 4
  %37 = icmp uge i32 %35, %36
  br i1 %37, label %38, label %44

38:                                               ; preds = %31
  %39 = load i8*, i8** %7, align 8
  %40 = load i32, i32* @AV_LOG_ERROR, align 4
  %41 = load i32, i32* %10, align 4
  %42 = call i32 @av_log(i8* %39, i32 %40, i8* getelementptr inbounds ([36 x i8], [36 x i8]* @.str.1, i64 0, i64 0), i32 %41)
  %43 = load i32, i32* @AVERROR_INVALIDDATA, align 4
  store i32 %43, i32* %4, align 4
  br label %59

44:                                               ; preds = %31
  %45 = load i32, i32* %10, align 4
  %46 = load %struct.TYPE_3__*, %struct.TYPE_3__** %5, align 8
  %47 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %46, i32 0, i32 0
  store i32 %45, i32* %47, align 4
  store i32 1, i32* %9, align 4
  br label %48

48:                                               ; preds = %55, %44
  %49 = load i32, i32* %9, align 4
  %50 = load i32, i32* %8, align 4
  %51 = icmp sle i32 %49, %50
  br i1 %51, label %52, label %58

52:                                               ; preds = %48
  %53 = load i32*, i32** %6, align 8
  %54 = call i8* @get_ue_golomb_long(i32* %53)
  br label %55

55:                                               ; preds = %52
  %56 = load i32, i32* %9, align 4
  %57 = add nsw i32 %56, 1
  store i32 %57, i32* %9, align 4
  br label %48

58:                                               ; preds = %48
  store i32 0, i32* %4, align 4
  br label %59

59:                                               ; preds = %58, %38, %25
  %60 = load i32, i32* %4, align 4
  ret i32 %60
}

declare dso_local i32 @get_bits(i32*, i32) #1

declare dso_local i8* @get_ue_golomb_long(i32*) #1

declare dso_local i32 @av_log(i8*, i32, i8*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
